Better AppContentTest